--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: ensure systemd-resolved
   block:
+    - import_tasks: environment.yml
     - import_tasks: resolved.conf.yml
     - import_tasks: systemd.yml
     - import_tasks: resolv.conf.yml
