use separate systemd-service role

--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -1,17 +1,7 @@
 ---
-- name: ensure systemd
-  block:
-    - name: ensure systemd-resolved service is enabled
-      systemd:
-        name: "{{ systemd_resolved_service_name }}"
-        enabled: true
-    - name: ensure systemd-resolved service is started
-      systemd:
-        name: "{{ systemd_resolved_service_name }}"
-        state: "started"
-    - name: ensure systemd-resolved service is restarted
-      systemd:
-        name: "{{ systemd_resolved_service_name }}"
-        state: "restarted"
-      when: systemd_resolved_conf.changed
-  become: true
+- name: ensure systemd service
+  include_role:
+    name: "damex.systemd_service"
+  vars:
+    systemd_service_name: "{{ systemd_resolved_service_name }}"
+    systemd_service_restart_on: "systemd_resolved_conf.changed"
