--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,4 +14,5 @@ galaxy_info:
     - name: "Debian"
       versions:
         - "buster"
-dependencies: []
+dependencies:
+  - role: "damex.systemd_service"
