systemd condition fix

--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -4,4 +4,4 @@
     name: "damex.systemd_service"
   vars:
     systemd_service_name: "{{ systemd_resolved_service_name }}"
-    systemd_service_restart_on: "systemd_resolved_conf.changed"
+    systemd_service_restart_on: "{{ systemd_resolved_conf.changed }}"
