--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,4 @@ systemd_resolved_dnsovertls: false
 systemd_resolved_cache: true
 systemd_resolved_dnsstublistener: "udp"
 systemd_resolved_readetchosts: true
+systemd_resolved_fallback_dns: []
