--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: systemd-resolved
+  role_name: systemd_resolved
   author: Roman Kuzmitskii
   description: systemd-resolved role
   license: GPLv2
