--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,4 @@ systemd_resolved_cache: true
 systemd_resolved_dnsstublistener: "udp"
 systemd_resolved_readetchosts: true
 systemd_resolved_fallback_dns: []
+systemd_resolved_override_resolv_conf: true
