Allow changing the symlinked file as well.

--- a/tasks/resolv.conf.yml
+++ b/tasks/resolv.conf.yml
@@ -1,7 +1,7 @@
 ---
 - name: ensure resolv.conf
   file:
-    src: "/run/systemd/resolve/stub-resolv.conf"
+    src: "{{ systemd_resolv_conf_file }}"
     dest: "/etc/resolv.conf"
     state: link
     force: true
