--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,3 +12,4 @@ systemd_resolved_dnsstublistener: "udp"
 systemd_resolved_readetchosts: true
 systemd_resolved_fallback_dns: []
 systemd_resolved_override_resolv_conf: true
+systemd_resolv_conf_file: "/run/systemd/resolve/stub-resolv.conf"
